samples/kubernetes-yaml/ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: myapp-ingress
  labels:
    name: myapp  
spec:  
  rules:
  - host: myapp.apps.cna-demo.ga
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: myapp
            port: 
              name: http
